# improve cargo structure
# Do some perf checks nice video https://www.youtube.com/watch?v=qLKv4g1apB0
[package]
name = "peta"
version = "0.0.3"
authors = ["Dmitrii Goriunov <goriunovd@gmail.com>"]
description = "Very small and simple http library"
edition = "2018"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/goriunov/peta"
repository = "https://github.com/goriunov/peta"
documentation = "https://docs.rs/peta/"

[dependencies]
tokio-current-thread = "0.1"
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
httparse = "1.3"
net2 = "0.2"

[dev-dependencies]
hyper = "0.12"

[profile.release]
debug = true